--- a/gesValeriaEric/paper/urge09.tex
+++ b/gesValeriaEric/paper/urge09.tex
@@ -43,7 +43,7 @@
 
 \begin{document}
 
-\title{Restrictive rules in the Chilean Cámara: Fighting floor amendments with the urgency authority\thanks{The authors are grateful to Sebastián Soto Velasco for help understanding the urgency authority; to Ernesto Calvo, José Antonio Cheibub (...)  for comments and critiques to previous incarnations of the paper. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The authors bear sole responsibility for mistakes and shortcomings in the study.}}
+\title{Restrictive rules in the Chilean Cámara: Fighting floor amendments with the urgency authority\thanks{The authors are grateful to Sebastián Soto Velasco for help understanding the urgency authority; to Ernesto Calvo, José Antonio Cheibub (...)  for comments and critiques to previous incarnations of the paper. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project #NS100014. The authors bear sole responsibility for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
@@ -54,7 +54,7 @@
 \begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among formidable proactive legislative powers of Chile's president is the urgency authority. Lawmakers face a short deadline to discuss and vote bills declared urgent. Research had showed that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. We underscore a procedural distinction of this institution that Chilean scholars have overlooked: the floor considers urgent bills under \emph{restrictive rules}, giving presidents the ability to shield committee reports from floor amendments. Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. There is significant evidence that urgency messages associate with the type of restrictive rule correlates found in the U.S.
+\noindent Among the formidable proactive legislative powers of Chile's president is urgency authority. Lawmakers face a short deadline to discuss and vote bills declared urgent. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper underscores a procedural distinction of this institution that scholars have overlooked: the floor considers urgent bills under \emph{restrictive rules}, giving presidents the ability to shield committee reports from floor amendments. Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. We provide significant evidence that urgency messages associate with the type of restrictive rule correlates found in the U.S.
 \end{abstract}
 
 % para ges y valeria: opción 1 es usar shareLatex; opción 2 es buscar sugerencias para colaborar en web via word; opción 3 es editar en word dándoles unas instrucciones básicas de qué no tocar; opción 4 es sacar los párrafos de texto con menciones de tables y figures (que deben ver en el pdf)... voy por ésta ahora
@@ -74,22 +74,27 @@
 
 \section{Introduction}
 
-\noindent The urgency authority is the president's power to interfere, to variable degrees, with the assembly's voting schedule. Presidents with such power can choose to confront legislators with a deadline to discuss and vote legislation by simply calling it urgent. Seen against the U.S.\ system, where an impatient president has no formal resources to pressure legislators to act on stagnant legislation that he would like to see considered, the urgency authority might even seem contradictory to classic notions of separation of power. The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+\noindent The prerogative to declare bills urgent gives the president power to interfere, to variable degrees, with congress' voting schedule. Presidents with such power can choose to confront legislators with a deadline to discuss and vote legislation by simply designating it urgent. Seen against the U.S.\ system, where an impatient president has no formal resources to pressure legislators to act on stagnant legislation that he would like to see considered, urgency authority may even seem contradictory to classic notions of separation of powers. The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
 
 % federalist 70
 % Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
 
-Yet, with considerable variation, five constitutions of the Americas have such authority \citep{morgenstern.2002b}. In Brazil, the assembly must act on urgent legislation withing forty five days, else the bill in question takes precedence over all legislative business. The president can declare any executive-initiated bill urgent at any time. In Colombia, urgent bills go to the top of the voting schedule immediately. In Uruguay and Chile, legislators must act within a pre-specified, short period. Failure to do so converts the urgent bill into law in Uruguay (although three-fifths of any chamber's membership can remove the project's urgent status). And in Mexico the president can propose up to two urgent bills at the start of each biannual ordinary period, which must scheduled for floor consideration within 30 days. As in Chile, how to proceed in case of legislative non-compliance is indeterminate.\footnote{Constitutional articles vesting this authority are the following: Brazil 62 and 64; Chile 74; Colombia 163; Mexico 71; and Uruguay 168.7.}
+Yet, with considerable variation, five constitutions of the Americas have such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. The president can declare any executive-initiated bill urgent at any time. In Colombia, urgent bills go to the top of the voting schedule immediately. In Uruguay and Chile, legislators must act within a pre-specified, short period, although the consequences of not doing so vary between the two countries. Failure to do so converts the urgent bill into law in Uruguay, \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.} but not in Chile. In Mexico the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days. In Mexico, as in Chile, how to proceed in case of legislative non-compliance is indeterminate.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
 
-%\emm{How does this compare with special (extra-ordinary) sessions? Some presidents can summon legislators to a special session to discuss, exclusively, a specific bill defined ex-ante. Limits? If few, might resemble urgency authority... Check}
+%\emm{How does this compare with special (extra-ordinary) sessions? Some presidents can summon legislators to a special session to discuss, exclusively, a specific bill defined ex-ante. Limits? If few, might resemble urgency authority... Check. VP WILL LOOK INTO THIS }
 
-The urgency authority has received limited attention. \citet{siavelis.2002} is the only systematic study we are aware of. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency, and about nine out of ten urgent bills were executive-initiated. Seeking whether or not urgent proposals had a more expedite legislative process and an improved likelihood of passage, the study found mixed evidence at best. Among executive proposals, urgent ones had somewhat shorter consideration than the rest (medians of 134 vs.\ 160 days, respectively). But no palpable difference in success rates could be appreciated (64 vs.\ 63 percent). 
+Urgency authority has received limited attention. \citet{siavelis.2002} stands out given the systematic nature of his study of the urgency prerogative in Chile. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency qualification, and about nine out of ten bills marked urgent were initiated by the executive. Seeking whether or not proposals marked urgent had a more expedited legislative process and an improved likelihood of passage, the study found mixed evidence at best. Among executive proposals, those marked urgent underwent shorter considerations than the rest (medians of 134 vs.\ 160 days, respectively). But no palpable difference in success rates could be appreciated (64 vs.\ 63 percent). 
 
-The poor signal may bear relation to selection bias. Strategic presidents are likely to target for urgency proposals that differ from the rest in important ways, so the set of bills receiving urgent status is not random. Right censoring may also be an obstacle. A more fundamental problem is institutional indeterminacy. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. %---unlike the Brazilian, Colombian, and Uruguayan variants.
+We claim that the poor signal given by bills designated urgent in Chile may bear relation to selection bias. Strategic presidents are likely to target bills that differ from the rest in important ways, so that the set of bills receiving urgent status is not random. Right censoring may also be an obstacle. A more fundamental problem is institutional indeterminacy. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. %---unlike the Brazilian, Colombian, and Uruguayan variants.
 
-We argue that the effects of the urgency authority are procedural. Proposals the president declares urgent in Chile are considered with restrictive rules by the chamber's plenary. If the rationale is expediting the legislative process, one key consequence is to effectively shield committee reports from amendments by the plenary.
+This paper argues that the effects of urgency authority are procedural. Proposals the president declares urgent in Chile are considered under restrictive rules by the chamber's plenary. If the rationale is expediting the legislative process, one key consequence is to effectively shield committee reports from amendments by the plenary.
 
-The paper proceeds thus. Section 2 describes our data on urgency incidence. We elaborate on urgency degrees, a distinction of central importance to the study of the Chilean institution. The poorness of the signal, we show, stems partly from overlooking urgency degrees. Section 3 offers our interpretation of the urgency authority as a restrictive rule. Schematizing the sequence of committee reports and plenary readings shows that it is much harder to offer plenary amendments to urgent than non-urgent legislation. Section 4 extends a simple model of restrictive rules from the U.S.\ to the Chilean Congress. The spatial model highlights the logic behind the procedural choice: when the executive anticipates that a palatable committee report is vulnerable to floor amendments, declaring it urgent imposes a take-it-or-leave-it vote. Section 5 draws testable hypotheses and section 6 offers a test. Examination of all bills in the 1998--2014 period in search of urgency authority predictors shows that, other features constant, preference similarity between the president and the committee chair (as measured by co-partisanship) associates significantly with urgency messages. Simulations further show that... Section 6 discusses some implications of our findings and section 7 concludes.
+%\emm{VP: Me sigue pareciendo que está faltando una sección que discuta la literatura sobre Chile, sea en la sección 2, antes de cerrar la 1, o una nueva sección 1,5 por decir algo. Yo puedo escribir un par de páginas en ese espíritu post-APSA, y eso engancharía con lo que Ges se comprometió a escribir pre-APSA sobre el puzzle. INCLUIR a Alemán y Navia, y ver qué más}
+
+The paper proceeds as follows: Section 2 describes our data on urgency incidence. We elaborate on urgency degrees, a distinction of central importance to the study of the institution in Chile. The poorness of the signal, we show, stems partly from overlooking urgency degrees. %no sé cómo hacerlo pero pondría "degrees" en italics
+Section 3 offers our interpretation of the urgency authority as a restrictive rule. Schematizing the sequence of committee reports and plenary readings shows that it is much harder to introduce plenary amendments to urgent than non-urgent bills. Section 4 extends a simple model of restrictive rules from the U.S.\ to the Chilean Congress. The spatial model highlights the logic behind the procedural choice: when the executive anticipates that a palatable committee report is vulnerable to floor amendments, declaring it urgent imposes a take-it-or-leave-it vote on the floor. Section 5 draws testable hypotheses which section 6 tests. Examination of all bills in the 1998--2014 period in search of urgency authority predictors shows that, other features constant, preference similarity between the president and the committee chair (as measured by co-partisanship) associates significantly with urgency messages. Simulations further show that... Section 7 discusses some implications of our findings and section 8 concludes.
+
+%\emm{VP:Come back to this description of the structure later. Looks like we may not need 7-8 sections, 5 may be enough?: 4 and 5 could go together, current 7 and 8 perhaps also, depending}
 
 \section{Urgent legislation and urgency degrees}
 
@@ -634,26 +639,33 @@ The game's analysis is analogous to \citet{magar.nd} and \citet{dion.huber.1996}
 
 \section{Hypotheses}
 
-With auxiliary assumptions, comparative statics analysis of the game's equilibrium generates testable hypotheses. We discuss three.
+Comparative statics analysis of the game's equilibrium generates testable hypotheses. We discuss two, along with the auxiliary assumptions that are required. Many more could be derived.
 
-It is plain in Figure \ref{F:predictions} how the dark-gray zones predominate over the light-gray and white. The first theoretical prediction follows: 
+To start, note how the dark-gray zones predominate in Figure \ref{F:predictions} over the light-gray and white. Urgent consideration regime correspond to dark-gray, and the first theoretical prediction follows.
 
-Hypothesis 1: other things constant, urgent bill consideration is much likelier than standard bill consideration. 
+\begin{description}
+  \item [Hypothesis 1] Other things constant, urgent bill consideration is likelier than standard bill consideration. 
+\end{description}
+    
+\noindent The supporting auxiliary assumptions are two: (1) a stochastic status quo with uniform probability density in $[0,1]$ is assumed; and (2) that preference profiles I, II, and III in the Figure are equiprobable. Auxiliary assumption can be relaxed, within limits, without invalidating this prediction. 
 
-\noindent The supporting auxiliary assumptions are two: that a stochastic status quo with uniform probability density in $[0,1]$ is assumed; and that the three preference profiles in the Figure are equiprobable. Auxiliary assumption can be relaxed, within limits, without invalidating this prediction. 
+Also plain in the Figure is that white areas, corresponding to standard bill consideration, occur under profile III only. The president's and the committee's ideal points stand on either side of the floor median in profile III, but on the same side in I and II.
 
-Also plain in the Figure is that white areas, corresponding to standard bill consideration, appear only under profile III. Possible consideration regimes in the other two profiles include urgent and none (when there is no committee report). Hence the nes theoretical prediction. 
+If these conditions are easy to see in theory, preference unobservability is an obstacle towards a test. Auxiliary assumptions therefore need discussion before putting a hypothesis forth: (1) chairs are dictators in their committee's jurisdiction; and (2) party determines ideal point. The first auxiliary assumption sets procedure in such way that the committee can be construed as a unitary actor. The second associates player preferences to something observable, such that co-partisans share one location in space. The next theoretical prediction follows. 
 
-Hypothesis 2: standard consideration will \textbf{not} be observed when the committee chair belongs in the president's party. Auxiliary assumptions: chairs are dictators in their committee; party determines ideal point so that co-partisan chair and president have same location in space. 
+\begin{description}
+  \item [Hypothesis 2] Other things constant, standard bill consideration does not occur when the committee chair reporting belongs in the president's party. 
+\end{description}
 
-\emm{podríamos también discutir/probar una Hypothesis 3 sobre Pr(gatekeeping|co-partisan chair)?} 
+\noindent Given presidential coalition discipline in Chile \citep{aleman.saiegh.coalUnityChile.2007,carey.2002}, an alternative version of Hypothesis 2 replaces `party' by `coalition' as measure of preferences. 
 
+%\emm{podríamos también discutir/probar una Hypothesis 3 sobre Pr(gatekeeping|co-partisan chair)?} 
 
 \section{Urgency predictors}
 
 A systematic analysis of data in Table \ref{T:billDescriptives} is revealing. The units are individual proposals: the dependent variable \emph{Urgent bill} equals 1 for proposals that became urgent at any point of the legislative process, 0 otherwise. It excludes `one month' deadlines, which do not trigger restrictive rules (including them does not change the reported results in a fundamental way, see the appendix). Multivariate analysis controls for president--reporting committee preference coincidence, for bill features, for timing, and for the strategic environment. Formal variable definitions and descriptive statistics appear in the appendix.
 
-The preference group includes two regressors. \emph{Co-partisan comm. chair} equals 1 if the bill was referred to a standing committee presided by a member of the president's party, 0 otherwise. This is our key independent variable, controlling for a shared location in space between the chief executive and the reporting committee. Other things constant, we expect it to associate positively with the dependent variable. Multiple committee referrals are common in Chile. Part A of Table \ref{T:chairsSeats} shows that the number of standing committee chairs from the president's party oscillated sharply in the period, from a high of 53 percent in the 1998--2002 Legislatura, to a low of 17 percent in the 2006--10 Legislatura. And the opposition was absent among standing committee chairs in 2006--10 only, controlling up to 24 and 27 percent in 2002--06 and 2010--14, respectively. It is likely that \emph{largesse} towards the opposition was a way of beefing up the legislative support for the president.\footnote{The Table's parts B and C report variance in the size and status of the president's coalition in Congress. Given electoral list voting unity since the return to democracy \citep{carey.2002,aleman.saieg.coalUnityChile.2007}, the seats they control are a good indicator of the executive's legislative support. The coalition was always in control of the Cámara, but has controlled Senate majorities between 2006 and 2010 only (coinciding with the first Bachelet administration). By requiring 67, 60, and 57 percent votes of each chamber, respectively, constitutional reform, constitution-interpreting legislation, and organic laws therefore always required votes across the aisle.}
+The preference group includes two regressors. \emph{Co-partisan comm. chair} equals 1 if the bill was referred to a standing committee presided by a member of the president's party, 0 otherwise. This is our key independent variable, controlling for a shared location in space between the chief executive and the reporting committee. Other things constant, we expect it to associate positively with the dependent variable. Multiple committee referrals are common in Chile. Part A of Table \ref{T:chairsSeats} shows that the number of standing committee chairs from the president's party oscillated sharply in the period, from a high of 53 percent in the 1998--2002 Legislatura, to a low of 17 percent in the 2006--10 Legislatura. And the opposition was absent among standing committee chairs in 2006--10 only, controlling up to 24 and 27 percent in 2002--06 and 2010--14, respectively. It is likely that \emph{largesse} towards the opposition was a way of beefing up the legislative support for the president.\footnote{The Table's parts B and C report variance in the size and status of the president's coalition in Congress. Given electoral list voting unity since the return to democracy \citep{carey.2002,aleman.saiegh.coalUnityChile.2007}, the seats they control are a good indicator of the executive's legislative support. The coalition was always in control of the Cámara, but has controlled Senate majorities between 2006 and 2010 only (coinciding with the first Bachelet administration). By requiring 67, 60, and 57 percent votes of each chamber, respectively, constitutional reform, constitution-interpreting legislation, and organic laws therefore always required votes across the aisle.}
 
 
 \begin{table}
