EM merged versions of urge09.tex in local dir and in dropbox

--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,3 +1,56 @@
+% Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
+% Date and time: Mon, Aug 21, 2017 - 02:32:23 PM
+% Requires LaTeX packages: dcolumn 
+\begin{table}%[!htbp]
+  \centering 
+  \caption{Urgency predictors. Dependent variable indicates urgent bills. Model 3 includes fixed Legislatura effects (not reported). Model 4 estimates separate error terms by Legislatura. Method of estimation: generalized linear model (model 4), others with logit.}\label{t:urgenLogit}
+  \begin{tabular}{@{\extracolsep{0pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
+    \hline \\[-1.8ex] 
+    & \multicolumn{4}{c}{DV: Bill received urgency message} \\ 
+    \\[-1.8ex] & \multicolumn{1}{c}{(1)} & \multicolumn{1}{c}{(2)} & \multicolumn{1}{c}{(3)} & \multicolumn{1}{c}{(4)}\\ 
+    \\ [-1.8ex] 
+    \hline \\[-1.8ex] 
+ Copartisan comm.~chair    & \\ 
+                           &\\ 
+ Coalition comm.~chair     &   \\ 
+                           & \\ 
+ Multiple referrals        &     \\ 
+                           & \\ 
+ Member bill               &}     \\ 
+                           & \\ 
+ Hacienda referral         &      \\ 
+                           & \\ 
+ Senate majority           & \\ 
+                           & \\ 
+ Introduced Senate         &      \\ 
+                           & \\ 
+ Year remaining            &    \\ 
+                           & \\ 
+ Relax deadlines           &  \\ 
+                           &  \\ 
+ Pres.~approval            &  \\ 
+                           &  \\ 
+ 2002-06 Leg.              &  \\ 
+                           &  \\ 
+ 2006-10 Leg.              &   \\ 
+                           &  \\ 
+ 2010-14 Leg.              &   \\ 
+                           &  \\ 
+ Constant                  &}      \\ 
+                           &    \\ 
+\hline \\[-1.8ex] 
+Observations & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} \\ 
+Log Likelihood & \multicolumn{1}{c}{-1,718.325} & \multicolumn{1}{c}{-1,717.834} & \multicolumn{1}{c}{-1,709.260} & \multicolumn{1}{c}{-1,715.995} \\ 
+Akaike Inf. Crit. & \multicolumn{1}{c}{3,456.650} & \multicolumn{1}{c}{3,455.668} & \multicolumn{1}{c}{3,440.519} & \multicolumn{1}{c}{3,449.989} \\ 
+Bayesian Inf. Crit. &  &  &  & \multicolumn{1}{c}{3,511.655} \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table} 
+
+
+
 %from  intro
 The urgency authority has received limited attention. \citet{siavelis.2002} is the only systematic study we are aware of. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency, and about nine out of ten urgent bills were executive-initiated. Seeking whether or not urgent proposals had a more expedite legislative process and an improved likelihood of passage, the study found mixed evidence at best. Among executive proposals, urgent ones had somewhat shorter consideration than the rest (medians of 134 vs.\ 160 days, respectively). But no palpable difference in success rates could be appreciated (64 vs.\ 63 percent). 
 
